--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.YoutubeApiTesting"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.YoutubeApiTesting">
@@ -38,11 +38,11 @@
             />
 
         <receiver
-            android:name="com.example.youtubeapitesting.AlarmReceiver"
+            android:name="com.example.youtubeapitesting.utils.AlarmReceiver"
             android:exported="true"/>
 
         <receiver
-            android:name="com.example.youtubeapitesting.BootReceiver"
+            android:name="com.example.youtubeapitesting.utils.BootReceiver"
             android:enabled="false"
             android:exported="false">
 
