--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,9 @@
 buildscript {
     apply from: './dependencies.gradle'
-    ext {
-        compose_ui_version = '1.2.0'
-    }
 
     dependencies {
         classpath "com.android.tools.build:gradle:$versions.gradlePlugin"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.21"
 
         classpath "com.getkeepsafe.dexcount:dexcount-gradle-plugin:$versions.dexCount"
 
@@ -15,9 +12,9 @@ buildscript {
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.4.1' apply false
-    id 'com.android.library' version '7.4.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'com.android.application' version '8.0.1' apply false
+    id 'com.android.library' version '8.0.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.21' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
 
