--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,16 +3,17 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'kotlin-parcelize'
 }
 
 android {
     namespace 'com.example.youtubeapitesting'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.youtubeapitesting"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -47,9 +48,10 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.7'
+        kotlinCompilerExtensionVersion '1.5.1'
     }
     packagingOptions {
             packagingOptions {
@@ -64,24 +66,24 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview:"
-    implementation "androidx.compose.material3:material3:1.2.0-alpha01"
+    implementation "androidx.compose.material3:material3:1.2.0-alpha07"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-storage:20.2.0'
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'com.google.firebase:firebase-storage:20.2.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.3"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.5.1"
     debugImplementation "androidx.compose.ui:ui-tooling"
     debugImplementation "androidx.compose.ui:ui-test-manifest:"
-    def nav_version = "2.5.3"
+    def nav_version = "2.7.2"
     implementation "androidx.navigation:navigation-compose:$nav_version"
-    def composeBom = platform('androidx.compose:compose-bom:2023.04.01')
+    def composeBom = platform('androidx.compose:compose-bom:2023.09.00')
     implementation composeBom
     implementation 'com.google.apis:google-api-services-youtube:v3-rev20210915-1.32.1'
 
@@ -89,17 +91,17 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-    implementation "com.google.dagger:hilt-android:2.44.2"
-    kapt "com.google.dagger:hilt-compiler:2.44.2"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3'
+    implementation "com.google.dagger:hilt-android:2.47"
+    kapt "com.google.dagger:hilt-compiler:2.47"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     implementation 'com.github.bumptech.glide:compose:1.0.0-alpha.1'
     implementation 'io.coil-kt:coil-compose:2.2.2'
     implementation "com.google.accompanist:accompanist-flowlayout:0.29.2-rc"
 
-    def room_version = "2.5.1"
+    def room_version = "2.5.2"
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
@@ -109,5 +111,5 @@ dependencies {
     implementation "androidx.room:room-paging:$room_version"
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:12.0.0'
 
-    implementation "androidx.paging:paging-compose:1.0.0-alpha19"
+    implementation "androidx.paging:paging-compose:3.2.1"
 }
